--- a/src/static/styles/variables.css
+++ b/src/static/styles/variables.css
@@ -18,6 +18,7 @@
   --datum-max-width: 1680px;
   --datum-max-width-container: 1372px;
   --datum-section-width: 155px;
+  --width-home-hero-visual: 635px;
   --max-width-8xl: 1372px;
   --width-8xl: 1372px;
 
